src/Pages/Details.css
:root {
  --blue: #3174ad;
  --pink: #ad3173;
  --orange: #fb8c00;
}

.page {
  background-color: var(--lightorange);
  height: 100vh;
}

.buttons {

}

.backButton {

}

.favButtons {

}

.details {

}

.paper {
  padding-top: 2vh;
  padding-bottom: 2vh;
  padding-left: 5vw;
  padding-right: 5vw;
}

.paperUpper {
  padding-top: 2vh;
  padding-bottom: 2vh;
}

.text {
  padding-top: 1vh;
  padding-bottom: 1vh;
  padding-left: 3vw;
  padding-right: 3vw;
}

